--- a/style.css
+++ b/style.css
@@ -1,8 +1,33 @@
-.header {
-  display: inline-flex;
-  margin: 0 auto;
+nav {
+  margin-right: 30px;
 }
 
-.container {
+nav span {
+  padding-right: 20px;
+}
 
+.header {
+  border-bottom: 1px solid black ;
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  font-family: Verdana, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.logo {
+  color: MediumAquamarine;
+  flex-grow: 1;
+  width: 80%;
+  padding-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.logo span {
+  padding-left: 10px;
 }
