--- a/style.css
+++ b/style.css
@@ -1,33 +1,6 @@
-nav {
-  margin-right: 30px;
-}
+/* CSS Reset */
+#element { margin:0; padding:0; font-size:100%; line-height:1; }
 
-nav span {
-  padding-right: 20px;
-}
-
-.header {
-  border-bottom: 1px solid black ;
-  height: 100px;
-  width: 100%;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-  font-family: Verdana, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.logo {
-  color: MediumAquamarine;
-  flex-grow: 1;
-  width: 80%;
-  padding-left: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.logo span {
-  padding-left: 10px;
-}
+...
+/* #element rules: */
+#element { margin:5px 0 10px; font-size:13px; line-height:1.5; }
