--- a/style.css
+++ b/style.css
@@ -1,6 +1,44 @@
-/* CSS Reset */
-#element { margin:0; padding:0; font-size:100%; line-height:1; }
 
-...
-/* #element rules: */
-#element { margin:5px 0 10px; font-size:13px; line-height:1.5; }
+body {
+  margin: 0;
+  color: black;
+}
+
+header {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  margin: 0 auto;
+  height: 80px;
+  width: 100%;
+  align-items: center;
+  font-family: Verdana sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom: 1px solid black;
+}
+
+nav {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  border: 1px solid black;
+}
+
+nav span {
+  padding-right: 20px;
+  border: 1px solid black;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  color: MediumAquamarine;
+  border: 1px solid black;
+}
+
+.logo span {
+  padding-left: 10px;
+  border: 1px solid black;
+}
