--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* CSS Reset */
+#element { margin:0; padding:0; font-size:100%; line-height:1; }
+
+...
+/* #element rules: */
+#element { margin:5px 0 10px; font-size:13px; line-height:1.5; }
 
 body {
   margin: 0;
@@ -41,4 +47,28 @@ nav span {
 .logo span {
   padding-left: 10px;
   border: 1px solid black;
+}
+
+.main {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+.column {
+  display: flex;
+  border-top: 1px solid black;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
 }
