--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   color: black;
 }
 
+/*  header  */
 header {
   display: flex;
   position: fixed;
@@ -18,12 +19,13 @@ header {
   height: 80px;
   width: 100%;
   align-items: center;
-  font-family: Verdana sans-serif;
+  font-family: Verdana, sans-serif;
   font-size: 14px;
   font-weight: bold;
   border-bottom: 1px solid black;
+  background-color: white;
 }
-
+/*  navigation  */
 nav {
   display: flex;
   width: 100%;
@@ -31,11 +33,15 @@ nav {
   border: 1px solid black;
 }
 
-nav span {
+span.nav {
   padding-right: 20px;
   border: 1px solid black;
 }
 
+div, p, span {
+  border: 1px solid black;
+}
+/*  logo  */
 .logo {
   display: flex;
   align-items: center;
@@ -49,6 +55,7 @@ nav span {
   border: 1px solid black;
 }
 
+/*  Main   */
 .main {
   display: flex;
   width: 1232px;
@@ -56,19 +63,31 @@ nav span {
   padding-top: 116px;
 }
 
+/*  columns  */
 .column {
   display: flex;
-  border-top: 1px solid black;
+  margin-right: 20px;
 }
 
 .column.large {
   width: 630px;
+  border: 1px solid black;
+  align-content: center;
+  flex-direction: column;
+
 }
 
 .column.medium {
   width: 300px;
+  border: 1px solid black;
 }
 
 .column.small {
   width: 240px;
+  border: 1px solid black;
+}
+
+/*  first column  */
+.first {
+  width: 610px;
 }
