--- a/style.css
+++ b/style.css
@@ -30,23 +30,28 @@ nav {
   display: flex;
   width: 100%;
   justify-content: flex-end;
-  border: 1px solid black;
 }
 
 span.nav {
   padding: 20px 10px;
-  border: 1px solid black;
 }
 
-div, p, span {
+/* div, p, span {
   border: 1px solid black;
-}
+} */
 
 h2 {
   margin-top: 0;
   margin-bottom: 0;
   font-weight: bold;
   font-size: 17px;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+  padding: 4px 0px 25px 75px;
+  height: 10px;
 }
 
 /* News Stories  */
@@ -97,12 +102,10 @@ h2 {
   align-items: center;
   margin-left: 20px;
   color: MediumAquamarine;
-  border: 1px solid black;
 }
 
 .logo span {
   padding-left: 10px;
-  border: 1px solid black;
 }
 
 /*  columns  */
@@ -113,22 +116,18 @@ h2 {
 
 .column.large {
   display: flex;
-  border: 1px solid black;
   align-content: center;
   flex-direction: column;
-
 }
 
 .column.medium {
   width: 300px;
-  border: 1px solid black;
 }
 
 .column.small {
   display: flex;
   flex-direction: column;
   width: 240px;
-  border: 1px solid black;
 }
 
 /* Main Story */
@@ -142,5 +141,50 @@ h2 {
   margin-top: 0;
   text-align: left;
   font-size: 40px;
+}
 
+/*  Story images  */
+.fall.image {
+  background-image: url("images/img-story-2.png");
+  width: 300px;
+  margin-top: 0;
+}
+
+.burger.image {
+  background-image: url("images/img-story-3.png");
+  width: 300px;
+  margin-top: 0;
+}
+
+/*  2nd column images */
+.cat.image {
+  background-image: url("images/img-story-1.png");
+  width: 300px;
+  margin-top: 0;
+}
+
+/* 3rd column */
+.news-bites {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.bites {
+  display: flex;
+  height: 28px;
+  width: 165px;
+  padding: 10px 100px 10px 20px;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+}
+
+.column.small img {
+  height: 240px;
 }
