--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h2 {
   margin-top: 0;
   margin-bottom: 0;
   font-weight: bold;
-  font-size: 17px;
+  font-size: 30px;
 }
 
 h3 {
@@ -77,6 +77,12 @@ h3 {
   color: black;
 }
 
+
+.text {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
 .image {
   display: flex;
   flex-direction: column;
@@ -106,6 +112,7 @@ h3 {
 
 .logo span {
   padding-left: 10px;
+  width: 200px;
 }
 
 /*  columns  */
@@ -175,7 +182,7 @@ h3 {
   display: flex;
   height: 28px;
   width: 165px;
-  padding: 10px 100px 10px 20px;
+  padding: 5px 100px 8px 20px;
   align-items: center;
   justify-content: flex-start;
   background-color: WhiteSmoke;
@@ -187,4 +194,53 @@ h3 {
 
 .column.small img {
   height: 240px;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+.footer-content {
+  display: flex;
+  margin-left: 120px;
+  height: 40px;
+  width: 500px;
+}
+
+.mytimes {
+  width: 115px;
+  height: 25px;
+  margin: 0px;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 1px solid white;
+}
+
+.fn {
+  margin-left: 35px;
+  height: 25px;
+  width: 220px;
+}
+
+.footnav {
+  height: 20px;
+  margin: 0 auto;
+}
+
+.copyright {
+  width: 350px;
+  height: 25px;
+  margin-bottom: 0px;
+  margin-left: 40px;
 }
